@@ -23,6 +23,7 @@ version ? (????-??-??):
   - Debit Notes (alec)
   - added separate access rights for Userpanel and voip accounts (alec)
   - lmsd/payments: added 'check_invoices' option (alec)
+  - LMS::GetInvoiceContent() round fix (SoNiC)
 
 version 1.11.8 Belus (2009-05-19):
 
